--- a/HTML5/examples/forms.html
+++ b/HTML5/examples/forms.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Encontre no Google</h1>
-        <form action="https://www.google.com/search" method="get">
+        <form action="https://www.google.com/search" method="get" target="_blank">
             <label for="q">O que deseja pesquisar</label>
             <input type="text" id="q" name="q" placeholder="Nasa, SpaceX">
             <input type="submit" value="Pesquisar">
