--- a/HTML5/examples/forms.html
+++ b/HTML5/examples/forms.html
@@ -10,7 +10,7 @@
         <h1>Encontre no Google</h1>
         <form action="https://www.google.com/search" method="get" target="_blank">
             <label for="q">O que deseja pesquisar</label>
-            <input type="text" id="q" name="q" placeholder="Nasa, SpaceX">
+            <input type="number" id="q" name="q" min="10" max="12" required>
             <input type="submit" value="Pesquisar">
         </form>
     </body>
