--- a/CSS3/jupiter/jupiter.html
+++ b/CSS3/jupiter/jupiter.html
@@ -11,12 +11,12 @@
         <h1>Júpiter</h1>
         <h4>Lista de Luas</h4>
         <ol>
-            <li>Métis</li>
-            <li>Adrasteia</li>
-            <li>Amalteia</li>
-            <li>Tebe</li>
+            <li class="moon big-text">Métis</li>
+            <li class="moon">Adrasteia</li>
+            <li class="moon">Amalteia</li>
+            <li class="big-text">Tebe</li>
             <li>Io</li>
-            <li>Europa</li>
+            <li id="europa-text">Europa</li>
             <li>Ganímedes</li>
             <li>Calisto</li>
             <li>Temisto</li>
